# Precision-Fighting-Board

./: .gitignore  PrecisionFightingBoard.TEENSY40.hex  PrecisionFightingBoard.ino  README.md  platformio.ini  tester.ino  tester.py  xinput.ino
.gemini/: styleguide.md
PCB/KiCad Files/: PrecisionFightingBoard.dsn  PrecisionFightingBoard.frb  PrecisionFightingBoard.kicad_pcb  PrecisionFightingBoard.kicad_prl  PrecisionFightingBoard.kicad_pro  PrecisionFightingBoard.kicad_sch  PrecisionFightingBoard.net  PrecisionFightingBoard.rules  PrecisionFightingBoard.ses  PrecisionFightingBoard.xml  Teensy.kicad_prl  Teensy.kicad_pro  fp-lib-table
PCB/KiCad Files/Gerber/: PrecisionFightingBoard-B_Cu.gbr  PrecisionFightingBoard-B_Mask.gbr  PrecisionFightingBoard-B_Paste.gbr  PrecisionFightingBoard-B_Silkscreen.gbr  PrecisionFightingBoard-Edge_Cuts.gbr  PrecisionFightingBoard-F_Cu.gbr  PrecisionFightingBoard-F_Mask.gbr  PrecisionFightingBoard-F_Paste.gbr  PrecisionFightingBoard-F_Silkscreen.gbr  PrecisionFightingBoard-NPTH.drl  PrecisionFightingBoard-PTH.drl  PrecisionFightingBoard-job.gbrjob  bom.csv  positions.csv
PCB/KiCad Files/logos.pretty/: iori_logo.kicad_mod
PCB/KiCad Files/pos/: PrecisionFightingBoard-top-pos.csv
d-input/: d-input.ino  tester.ino  tester.py
d-input/tester/: joystickapi.py
include/: Gamepad.h
keyboard/: tester.ino  tester.py
src/: Gamepad.cpp  PrecisionFightingBoard.ino  main.cpp
stm32h7_pfb/: CMakeLists.txt  README.md
stm32h7_pfb/Inc/: button.h  main.h  tusb_config.h  usb_descriptors.h  xinput.h
stm32h7_pfb/Src/: button.c  main.c  usb_descriptors.c  usb_xinput_device.c  xinput.c
x-input/: PrecisionFightingBoard.ino  tester.py
x-input/ArduinoXInput_Teensy/: LICENSE.txt
x-input/ArduinoXInput_Teensy/teensy/avr/cores/teensy4/: usb_desc.c  usb_desc.h
x-input/ArduinoXInput_Teensy/teensy/avr/libraries/Bounce2/src/: Bounce2.h
x-input/tester/: gamepad_response_time_comparison.py
